--- a/ua/index.html
+++ b/ua/index.html
@@ -5,8 +5,9 @@
     <title>Den MacUndefined</title>
     <base href="/ua/">    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="styles.e2e6fbb9b2b944613a94.css"></head>
   <body>
     <app-root></app-root>
-  <script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.44edaacaa392c7e65129.js"></script></body>
+  <script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.025e4fce1efbbdce7fca.js"></script></body>
 </html>
