--- a/denmacundefined/src/index.html
+++ b/denmacundefined/src/index.html
@@ -5,10 +5,13 @@
     <title>Den MacUndefined</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
   </head>
-  <body>
+  <body id="page-top">
     <app-root></app-root>
   </body>
 </html>
