added dist in root

--- a/ua/index.html
+++ b/ua/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Den MacUndefined</title>
-    <base href="/">
+    <base href="/ua/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -13,5 +13,5 @@
   <link rel="stylesheet" href="styles.0a747e65352db730c89f.css"></head>
   <body id="page-top">
     <app-root></app-root>
-  <script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.762cb704fe62e9272a68.js"></script><script type="text/javascript" src="main.869f3b4c5fd98d12a822.js"></script></body>
+  <script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.762cb704fe62e9272a68.js"></script><script type="text/javascript" src="main.59cffc9ceeea5db70975.js"></script></body>
 </html>
