--- a/denmacundefined/src/index.html
+++ b/denmacundefined/src/index.html
@@ -3,13 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Den MacUndefined</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <base href="/"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="Just a good person"/>
+    <meta name="keywords" content="Den,MacUndefined,denmacundefined,Den MacUndefined">
+    <meta name="author" content="Den MacUndefined"/>
+    <meta name="robots" content="all"/>
+    <meta name="google" content="notranslate"/>
+    <meta property="og:title" content="Den MacUndefined"/>
+    <meta property="og:description" content="Just a good person"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://denmacundefined.pp.ua"/>
+    <meta property="og:image" content="http://denmacundefined.pp.ua/author.jpg"/>
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="uk_UA" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet"/>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'/>
   </head>
   <body id="page-top">
     <app-root></app-root>
